[tool.poetry]
name = "doi-extractor"
version = "0.1.0"
description = ""
authors = ["hnaohiro <hasegawanaohiro1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyPDF2 = "^2.10.0"
"pdfminer.six" = "^20220524"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
